@@ -1,12 +1,10 @@
 ---
- src/plugins/coreplugin/icore.cpp |    2 +-
+ qtcreator.pri |    2 +-
  1 file changed, 1 insertion(+), 1 deletion(-)
 
 --- a/qtcreator.pri
 +++ b/qtcreator.pri
-@@ -131,11 +131,11 @@ osx {
-     isEmpty(IDE_OUTPUT_PATH): IDE_OUTPUT_PATH = $$IDE_BUILD_TREE
- 
+@@ -134,7 +134,7 @@ osx {
      IDE_LIBRARY_PATH = $$IDE_OUTPUT_PATH/$$IDE_LIBRARY_BASENAME/qtcreator
      IDE_PLUGIN_PATH  = $$IDE_LIBRARY_PATH/plugins
      IDE_DATA_PATH    = $$IDE_OUTPUT_PATH/share/qtcreator
@@ -15,5 +13,3 @@
      IDE_BIN_PATH     = $$IDE_OUTPUT_PATH/bin
      win32: \
          IDE_LIBEXEC_PATH = $$IDE_OUTPUT_PATH/bin
-     else: \
-         IDE_LIBEXEC_PATH = $$IDE_LIBRARY_PATH/libexec
