@@ -1,8 +1,10 @@
+---
+ qtcreator.pri |    4 ++--
+ 1 file changed, 2 insertions(+), 2 deletions(-)
+
 --- a/qtcreator.pri
 +++ b/qtcreator.pri
-@@ -136,22 +136,22 @@ osx {
-     IDE_DOC_PATH     = $$IDE_OUTPUT_PATH/share/doc/qtcreator
-     IDE_BIN_PATH     = $$IDE_OUTPUT_PATH/bin
+@@ -139,7 +139,7 @@ osx {
      win32: \
          IDE_LIBEXEC_PATH = $$IDE_OUTPUT_PATH/bin
      else: \
@@ -11,10 +13,7 @@
      !isEqual(IDE_SOURCE_TREE, $$IDE_OUTPUT_PATH):copydata = 1
  
      LINK_LIBRARY_PATH = $$IDE_BUILD_TREE/$$IDE_LIBRARY_BASENAME/qtcreator
-     LINK_PLUGIN_PATH  = $$LINK_LIBRARY_PATH/plugins
- 
-     INSTALL_LIBRARY_PATH = $$QTC_PREFIX/$$IDE_LIBRARY_BASENAME/qtcreator
-     INSTALL_PLUGIN_PATH  = $$INSTALL_LIBRARY_PATH/plugins
+@@ -150,7 +150,7 @@ osx {
      win32: \
          INSTALL_LIBEXEC_PATH = $$QTC_PREFIX/bin
      else: \
@@ -23,5 +22,3 @@
      INSTALL_DATA_PATH    = $$QTC_PREFIX/share/qtcreator
      INSTALL_DOC_PATH     = $$QTC_PREFIX/share/doc/qtcreator
      INSTALL_BIN_PATH     = $$QTC_PREFIX/bin
-     INSTALL_APP_PATH     = $$QTC_PREFIX/bin
- }
