@@ -4,6 +4,8 @@ qtcreator (4.5.0-3) UNRELEASED; urgency=medium
   * Switch back to using the embedded botan's code. Version 1.10 will get
     removed from the archive. QTCREATORBUG-19745 was filed against upstream
     to improve this situation.
+    - Remove botan build dependency.
+  * Refresh patches.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 05 Feb 2018 17:15:51 -0300
 
